# delete-stall-git-repos

./: Cargo.toml  README.md
src/: main.rs
