[package]
name = "stall-repo-cleanup"
description = "A tool to clean up git repositories that have all changes committed."
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
git2 = "0.20.2"
inquire = "0.7.5"
tokio = { version = "1.45.0", features = ["full"] }
